[package]
name = "fury-sdk"
version = "0.1.0"
edition = "2021"
description = "A Rust client library for interacting with the FURY API service - a comprehensive toolkit for Solana token operations."
license = "MIT"
repository = "https://github.com/furydotbot/rust-sdk"
readme = "README.md"
keywords = ["sdk", "fury", "api"]
categories = ["api-bindings", "development-tools"]

[dependencies]
anyhow = "1.0.98"
bincode = "1.3.3"
bs58 = "0.5.1"
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
solana-sdk = {version = "2.2.2", features = ["borsh", "full", "serde_json", "solana-signature", "program"]}
tokio = { version = "1.36.0", features = ["full"] }
